--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,6 @@
-# PROJECT VERSION
-version = ${project.version}
+# PROJECT
+name = ${project.name}
+version = ${version}
 # GIT URL
 gitURL = ${ciManagement.url}
 # LICENSE URL
