--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 # PROJECT
 name = ${project.name}
-version = ${version}
+version = ${project.version}
 # GIT URL
 gitURL = ${ciManagement.url}
 # LICENSE URL
